# sample_sit_autonomous_rose_node

./: README.md
sample/: CMakeLists.txt  package.xml  setup.py
sample/launch/: nodes.launch
sample/scripts/: compile.py  test.pyx
sample/src/: talker.cpp  talker.py
