<?xml version="1.0"?>
<package format="2">
  <name>sample</name>
  <version>0.0.0</version>
  <description>Sample talker</description>

  <maintainer email="ruslan@atlasracing.com">Ruslan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>

